# monkeyplug

./: .dockerignore  .gitignore  Dockerfile  README.md  build_docker.sh  monkeyplug-docker.sh  monkeyplug-inplace-recursive.sh  monkeyplug.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: monkeyplug-build-push-ghcr.yml  monkeyplug-build-push-vosk-ghcr.yml  monkeyplug-build-push-whisper-ghcr.yml
docker/: Dockerfile  build_docker.sh  monkeyplug-docker.sh
input/: Witch_mother1.m4b  Witch_mother1_transcript.json  swear_list.txt
scripts/: monkeyplug-inplace-recursive.sh  monkeyplug-inplace.sh  store_unique.sh
src/monkeyplug/: __init__.py  monkeyplug.py  swears.txt  utilities.py
tests/: test_functional.py  test_swears_loading.py  test_transcript_save_reuse.py  test_utilities.py
