[metadata]
name = monkeyplug
version = 1.0.1
author = Seth Grover
author_email = mero.mero.guero@gmail.com
description = monkeyplug is a little script to mute profanity in audio files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmguero/monkeyplug
project_urls =
    Bug Tracker = https://github.com/mmguero/monkeyplug/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
package_dir =
    = src
packages = find:
zip_safe = False
python_requires = >=3.6
install_requires =
    delegator.py
    requests
    vosk

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    monkeyplug = monkeyplug:RunMonkeyPlug

[options.packages.find]
where = src