[metadata]
name = monkeyplug
version = 2.1.3
author = Seth Grover
author_email = mero.mero.guero@gmail.com
description = monkeyplug is a little script to censor profanity in audio files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmguero/monkeyplug
project_urls =
    Bug Tracker = https://github.com/mmguero/monkeyplug/issues
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Sound/Audio :: Speech

[options]
package_dir =
    = src
packages = find:
zip_safe = False
python_requires = >=3.6
install_requires =
    mmguero
    mutagen
    requests

[options.package_data]
* = *.txt

[options.entry_points]
console_scripts =
    monkeyplug = monkeyplug:RunMonkeyPlug

[options.packages.find]
where = src